[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/pole.gd" type="Script" id=1]
[ext_resource path="res://gfx/map objects/pole_test.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[node name="pole" type="Area2D"]

z/z = 1
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 8, 8 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2
script/script = ExtResource( 1 )
extend_down = 0

[node name="pole_col" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="pole_col_shape" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 8, 8 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="Sprite" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 2 )
centered = false

[connection signal="body_enter" from="." to="." method="_on_pole_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_pole_body_exit"]


